===================
astroid's ChangeLog
===================


What's New in astroid 4.2.0?
============================
Release date: TBA



What's New in astroid 4.1.2?
============================
Release date: TBA



What's New in astroid 4.1.1?
============================
Release date: 2026-02-22

* Let `UnboundMethodModel` inherit from `FunctionModel` to improve inference of
  dunder methods for unbound methods.

  Refs #2741

* Filter ``Unknown`` from ``UnboundMethod`` and ``Super`` special attribute
  lookup to prevent placeholder nodes from leaking during inference.

  Refs #2741


What's New in astroid 4.1.0?
============================
Release date: 2026-02-08

* Add support for equality constraints (``==``, ``!=``) in inference.
  Closes pylint-dev/pylint#3632
  Closes pylint-dev/pylint#3633

* Ensure ``ast.JoinedStr`` nodes are ``Uninferable`` when the ``ast.FormattedValue`` is
  ``Uninferable``. This prevents ``unexpected-keyword-arg`` messages in Pylint
  where the ``Uninferable`` string appeared in function arguments that were
  constructed dynamically.

  Closes pylint-dev/pylint#10822

* Add support for type constraints (`isinstance(x, y)`) in inference.

  Closes pylint-dev/pylint#1162
  Closes pylint-dev/pylint#4635
  Closes pylint-dev/pylint#10469

* Make `type.__new__()` raise clear errors instead of returning `None`

* Move object dunder methods from ``FunctionModel`` to ``ObjectModel`` to make them
  available on all object types, not just functions.

  Closes #2742
  Closes #2741
  Closes pylint-dev/pylint#6094

* ``lineno`` and ``end_lineno`` are now available on ``Arguments``.

* Add helper to iterate over all annotations nodes of function arguments,
  ``Arguments.get_annotations()``.

  Refs #2860

* Skip direct parent when determining the ``Decorator`` frame.

  Refs pylint-dev/pylint#8425

* Add simple command line interface for astroid to output generated AST.
  Use with ``python -m astroid``.
